--- a/index.html
+++ b/index.html
@@ -533,9 +533,9 @@
         <div class="footer-coluna">
             <h4>Contato</h4>
             <ul>
-                <li>Email: contato@academico.com</li>
+                <li>Email: takvora@unip.com</li>
                 <li>Telefone: (00) 1234-5678</li>
-                <li>Endereço: Rua Exemplo, 123</li>
+                <li>Endereço: Rua Alto de Pinheiros - 124</li>
             </ul>
         </div>
     </footer>
